TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> inicializacoes declararFuncs codigo
Rule 2     inicializacoes -> inicializacoes inicializacao
Rule 3     inicializacoes -> <empty>
Rule 4     inicializacao -> DEFI ID IGUAL MATI
Rule 5     inicializacao -> DEFI [ NUM ] ID
Rule 6     inicializacao -> DEFI [ NUM ] [ NUM ] ID
Rule 7     inicializacao -> DEFI ID
Rule 8     inicializacao -> DEFF ID IGUAL MATF
Rule 9     declararFuncs -> <empty>
Rule 10    declararFuncs -> declararFuncs declaracao
Rule 11    MATI -> operando
Rule 12    MATI -> MATI + operando
Rule 13    MATI -> MATI - operando
Rule 14    MATI -> MATI * operando
Rule 15    MATI -> MATI / operando
Rule 16    MATI -> MATI % operando
Rule 17    operando -> NUM
Rule 18    operando -> ID
Rule 19    arr -> ID
Rule 20    operando -> arr [ MATI ]
Rule 21    operando -> arr [ MATI ] [ MATI ]
Rule 22    MATF -> FEXP
Rule 23    MATF -> MATF + FEXP
Rule 24    FEXP -> FLOAT
Rule 25    FEXP -> COS ( MATF )
Rule 26    FEXP -> SIN ( MATF )
Rule 27    MATF -> MATF - FLOAT
Rule 28    MATF -> MATF * FLOAT
Rule 29    MATF -> MATF / FLOAT
Rule 30    codigo -> <empty>
Rule 31    codigo -> codigo bloco
Rule 32    bloco -> arr [ MATI ] IGUAL MATI
Rule 33    matriz -> arr posicoes
Rule 34    posicoes -> [ MATI ] [ MATI ]
Rule 35    bloco -> matriz IGUAL MATI
Rule 36    bloco -> ID MENOSMENOS
Rule 37    bloco -> ID MAISMAIS
Rule 38    bloco -> ID IGUAL bool
Rule 39    bloco -> ID IGUAL MATI
Rule 40    callF -> CALL ID ( )
Rule 41    bloco -> callF
Rule 42    bloco -> ID IGUAL callF
Rule 43    declaracao -> defFunc ( ) { inicializacoes codigo return }
Rule 44    defFunc -> DEF ID
Rule 45    return -> RETURN NUM
Rule 46    return -> RETURN ID
Rule 47    bloco -> PRINTF ( textos )
Rule 48    textos -> TEXTO
Rule 49    textos -> TEXTO + arr [ MATI ]
Rule 50    textos -> TEXTO + array + TEXTO
Rule 51    array -> arr [ MATI ]
Rule 52    textos -> TEXTO + ID + TEXTO
Rule 53    textos -> TEXTO + ID
Rule 54    bloco -> PRINTF ( MATI )
Rule 55    bloco -> ID IGUAL GETLINE
Rule 56    bloco -> arr [ MATI ] IGUAL GETLINE
Rule 57    bloco -> initIF { codigo } else { codigo }
Rule 58    bloco -> initIF { codigo }
Rule 59    initIF -> IF ( bool )
Rule 60    else -> ELSE
Rule 61    bloco -> FOR ( cFor ) { codigo }
Rule 62    cFor -> initFor ; ID IGUAL MATI
Rule 63    cFor -> initEBool ; incremento
Rule 64    initFor -> ID IGUAL MATI
Rule 65    initEBool -> initFor ; bool
Rule 66    incremento -> ID MENOSMENOS
Rule 67    incremento -> ID MAISMAIS
Rule 68    bool -> bool AND boolexp
Rule 69    bool -> bool OR boolexp
Rule 70    bool -> boolexp
Rule 71    boolexp -> MATI MAIORIG MATI
Rule 72    boolexp -> TRUE
Rule 73    boolexp -> FALSE
Rule 74    boolexp -> MATI MENORIG MATI
Rule 75    boolexp -> MATI MENOR MATI
Rule 76    boolexp -> MATI MAIOR MATI
Rule 77    boolexp -> MATI IGUALDADE MATI
Rule 78    boolexp -> MATI DIFERENTE MATI
Rule 79    bloco -> repeat { codigo } UNTIL ( bool )
Rule 80    repeat -> REPEAT
Rule 81    bloco -> while { codigo }
Rule 82    while -> labelW ( bool )
Rule 83    labelW -> WHILE

Terminals, with rules where they appear

%                    : 16
(                    : 25 26 40 43 47 54 59 61 79 82
)                    : 25 26 40 43 47 54 59 61 79 82
*                    : 14 28
+                    : 12 23 49 50 50 52 52 53
-                    : 13 27
/                    : 15 29
;                    : 62 63 65
AND                  : 68
CALL                 : 40
COS                  : 25
DEF                  : 44
DEFF                 : 8
DEFI                 : 4 5 6 7
DIFERENTE            : 78
ELSE                 : 60
FALSE                : 73
FLOAT                : 24 27 28 29
FOR                  : 61
GETLINE              : 55 56
ID                   : 4 5 6 7 8 18 19 36 37 38 39 40 42 44 46 52 53 55 62 64 66 67
IF                   : 59
IGUAL                : 4 8 32 35 38 39 42 55 56 62 64
IGUALDADE            : 77
MAIOR                : 76
MAIORIG              : 71
MAISMAIS             : 37 67
MENOR                : 75
MENORIG              : 74
MENOSMENOS           : 36 66
NUM                  : 5 6 6 17 45
OR                   : 69
PRINTF               : 47 54
REPEAT               : 80
RETURN               : 45 46
SIN                  : 26
TEXTO                : 48 49 50 50 52 52 53
TRUE                 : 72
UNTIL                : 79
WHILE                : 83
[                    : 5 6 6 20 21 21 32 34 34 49 51 56
]                    : 5 6 6 20 21 21 32 34 34 49 51 56
error                : 
{                    : 43 57 57 58 61 79 81
}                    : 43 57 57 58 61 79 81

Nonterminals, with rules where they appear

FEXP                 : 22 23
MATF                 : 8 23 25 26 27 28 29
MATI                 : 4 12 13 14 15 16 20 21 21 32 32 34 34 35 39 49 51 54 56 62 64 71 71 74 74 75 75 76 76 77 77 78 78
arr                  : 20 21 32 33 49 51 56
array                : 50
bloco                : 31
bool                 : 38 59 65 68 69 79 82
boolexp              : 68 69 70
cFor                 : 61
callF                : 41 42
codigo               : 1 31 43 57 57 58 61 79 81
declaracao           : 10
declararFuncs        : 1 10
defFunc              : 43
else                 : 57
incremento           : 63
inicializacao        : 2
inicializacoes       : 1 2 43
initEBool            : 63
initFor              : 62 65
initIF               : 57 58
labelW               : 82
matriz               : 35
operando             : 11 12 13 14 15 16
posicoes             : 33
programa             : 0
repeat               : 79
return               : 43
textos               : 47
while                : 81

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . inicializacoes declararFuncs codigo
    (2) inicializacoes -> . inicializacoes inicializacao
    (3) inicializacoes -> .

    DEFI            reduce using rule 3 (inicializacoes -> .)
    DEFF            reduce using rule 3 (inicializacoes -> .)
    DEF             reduce using rule 3 (inicializacoes -> .)
    ID              reduce using rule 3 (inicializacoes -> .)
    PRINTF          reduce using rule 3 (inicializacoes -> .)
    FOR             reduce using rule 3 (inicializacoes -> .)
    CALL            reduce using rule 3 (inicializacoes -> .)
    IF              reduce using rule 3 (inicializacoes -> .)
    REPEAT          reduce using rule 3 (inicializacoes -> .)
    WHILE           reduce using rule 3 (inicializacoes -> .)
    $end            reduce using rule 3 (inicializacoes -> .)

    programa                       shift and go to state 1
    inicializacoes                 shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> inicializacoes . declararFuncs codigo
    (2) inicializacoes -> inicializacoes . inicializacao
    (9) declararFuncs -> .
    (10) declararFuncs -> . declararFuncs declaracao
    (4) inicializacao -> . DEFI ID IGUAL MATI
    (5) inicializacao -> . DEFI [ NUM ] ID
    (6) inicializacao -> . DEFI [ NUM ] [ NUM ] ID
    (7) inicializacao -> . DEFI ID
    (8) inicializacao -> . DEFF ID IGUAL MATF

    DEF             reduce using rule 9 (declararFuncs -> .)
    ID              reduce using rule 9 (declararFuncs -> .)
    PRINTF          reduce using rule 9 (declararFuncs -> .)
    FOR             reduce using rule 9 (declararFuncs -> .)
    CALL            reduce using rule 9 (declararFuncs -> .)
    IF              reduce using rule 9 (declararFuncs -> .)
    REPEAT          reduce using rule 9 (declararFuncs -> .)
    WHILE           reduce using rule 9 (declararFuncs -> .)
    $end            reduce using rule 9 (declararFuncs -> .)
    DEFI            shift and go to state 5
    DEFF            shift and go to state 6

    declararFuncs                  shift and go to state 3
    inicializacao                  shift and go to state 4

state 3

    (1) programa -> inicializacoes declararFuncs . codigo
    (10) declararFuncs -> declararFuncs . declaracao
    (30) codigo -> .
    (31) codigo -> . codigo bloco
    (43) declaracao -> . defFunc ( ) { inicializacoes codigo return }
    (44) defFunc -> . DEF ID

    ID              reduce using rule 30 (codigo -> .)
    PRINTF          reduce using rule 30 (codigo -> .)
    FOR             reduce using rule 30 (codigo -> .)
    CALL            reduce using rule 30 (codigo -> .)
    IF              reduce using rule 30 (codigo -> .)
    REPEAT          reduce using rule 30 (codigo -> .)
    WHILE           reduce using rule 30 (codigo -> .)
    $end            reduce using rule 30 (codigo -> .)
    DEF             shift and go to state 10

    codigo                         shift and go to state 7
    declaracao                     shift and go to state 8
    defFunc                        shift and go to state 9

state 4

    (2) inicializacoes -> inicializacoes inicializacao .

    DEFI            reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    DEFF            reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    DEF             reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    ID              reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    PRINTF          reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    FOR             reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    CALL            reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    IF              reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    REPEAT          reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    WHILE           reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    $end            reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)
    RETURN          reduce using rule 2 (inicializacoes -> inicializacoes inicializacao .)


state 5

    (4) inicializacao -> DEFI . ID IGUAL MATI
    (5) inicializacao -> DEFI . [ NUM ] ID
    (6) inicializacao -> DEFI . [ NUM ] [ NUM ] ID
    (7) inicializacao -> DEFI . ID

    ID              shift and go to state 11
    [               shift and go to state 12


state 6

    (8) inicializacao -> DEFF . ID IGUAL MATF

    ID              shift and go to state 13


state 7

    (1) programa -> inicializacoes declararFuncs codigo .
    (31) codigo -> codigo . bloco
    (32) bloco -> . arr [ MATI ] IGUAL MATI
    (35) bloco -> . matriz IGUAL MATI
    (36) bloco -> . ID MENOSMENOS
    (37) bloco -> . ID MAISMAIS
    (38) bloco -> . ID IGUAL bool
    (39) bloco -> . ID IGUAL MATI
    (41) bloco -> . callF
    (42) bloco -> . ID IGUAL callF
    (47) bloco -> . PRINTF ( textos )
    (54) bloco -> . PRINTF ( MATI )
    (55) bloco -> . ID IGUAL GETLINE
    (56) bloco -> . arr [ MATI ] IGUAL GETLINE
    (57) bloco -> . initIF { codigo } else { codigo }
    (58) bloco -> . initIF { codigo }
    (61) bloco -> . FOR ( cFor ) { codigo }
    (79) bloco -> . repeat { codigo } UNTIL ( bool )
    (81) bloco -> . while { codigo }
    (19) arr -> . ID
    (33) matriz -> . arr posicoes
    (40) callF -> . CALL ID ( )
    (59) initIF -> . IF ( bool )
    (80) repeat -> . REPEAT
    (82) while -> . labelW ( bool )
    (83) labelW -> . WHILE

    $end            reduce using rule 1 (programa -> inicializacoes declararFuncs codigo .)
    ID              shift and go to state 17
    PRINTF          shift and go to state 19
    FOR             shift and go to state 21
    CALL            shift and go to state 24
    IF              shift and go to state 25
    REPEAT          shift and go to state 26
    WHILE           shift and go to state 28

    bloco                          shift and go to state 14
    arr                            shift and go to state 15
    matriz                         shift and go to state 16
    callF                          shift and go to state 18
    initIF                         shift and go to state 20
    repeat                         shift and go to state 22
    while                          shift and go to state 23
    labelW                         shift and go to state 27

state 8

    (10) declararFuncs -> declararFuncs declaracao .

    DEF             reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    ID              reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    PRINTF          reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    FOR             reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    CALL            reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    IF              reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    REPEAT          reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    WHILE           reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)
    $end            reduce using rule 10 (declararFuncs -> declararFuncs declaracao .)


state 9

    (43) declaracao -> defFunc . ( ) { inicializacoes codigo return }

    (               shift and go to state 29


state 10

    (44) defFunc -> DEF . ID

    ID              shift and go to state 30


state 11

    (4) inicializacao -> DEFI ID . IGUAL MATI
    (7) inicializacao -> DEFI ID .

    IGUAL           shift and go to state 31
    DEFI            reduce using rule 7 (inicializacao -> DEFI ID .)
    DEFF            reduce using rule 7 (inicializacao -> DEFI ID .)
    DEF             reduce using rule 7 (inicializacao -> DEFI ID .)
    ID              reduce using rule 7 (inicializacao -> DEFI ID .)
    PRINTF          reduce using rule 7 (inicializacao -> DEFI ID .)
    FOR             reduce using rule 7 (inicializacao -> DEFI ID .)
    CALL            reduce using rule 7 (inicializacao -> DEFI ID .)
    IF              reduce using rule 7 (inicializacao -> DEFI ID .)
    REPEAT          reduce using rule 7 (inicializacao -> DEFI ID .)
    WHILE           reduce using rule 7 (inicializacao -> DEFI ID .)
    $end            reduce using rule 7 (inicializacao -> DEFI ID .)
    RETURN          reduce using rule 7 (inicializacao -> DEFI ID .)


state 12

    (5) inicializacao -> DEFI [ . NUM ] ID
    (6) inicializacao -> DEFI [ . NUM ] [ NUM ] ID

    NUM             shift and go to state 32


state 13

    (8) inicializacao -> DEFF ID . IGUAL MATF

    IGUAL           shift and go to state 33


state 14

    (31) codigo -> codigo bloco .

    ID              reduce using rule 31 (codigo -> codigo bloco .)
    PRINTF          reduce using rule 31 (codigo -> codigo bloco .)
    FOR             reduce using rule 31 (codigo -> codigo bloco .)
    CALL            reduce using rule 31 (codigo -> codigo bloco .)
    IF              reduce using rule 31 (codigo -> codigo bloco .)
    REPEAT          reduce using rule 31 (codigo -> codigo bloco .)
    WHILE           reduce using rule 31 (codigo -> codigo bloco .)
    $end            reduce using rule 31 (codigo -> codigo bloco .)
    }               reduce using rule 31 (codigo -> codigo bloco .)
    RETURN          reduce using rule 31 (codigo -> codigo bloco .)


state 15

    (32) bloco -> arr . [ MATI ] IGUAL MATI
    (56) bloco -> arr . [ MATI ] IGUAL GETLINE
    (33) matriz -> arr . posicoes
    (34) posicoes -> . [ MATI ] [ MATI ]

    [               shift and go to state 34

    posicoes                       shift and go to state 35

state 16

    (35) bloco -> matriz . IGUAL MATI

    IGUAL           shift and go to state 36


state 17

    (36) bloco -> ID . MENOSMENOS
    (37) bloco -> ID . MAISMAIS
    (38) bloco -> ID . IGUAL bool
    (39) bloco -> ID . IGUAL MATI
    (42) bloco -> ID . IGUAL callF
    (55) bloco -> ID . IGUAL GETLINE
    (19) arr -> ID .

    MENOSMENOS      shift and go to state 37
    MAISMAIS        shift and go to state 38
    IGUAL           shift and go to state 39
    [               reduce using rule 19 (arr -> ID .)


state 18

    (41) bloco -> callF .

    ID              reduce using rule 41 (bloco -> callF .)
    PRINTF          reduce using rule 41 (bloco -> callF .)
    FOR             reduce using rule 41 (bloco -> callF .)
    CALL            reduce using rule 41 (bloco -> callF .)
    IF              reduce using rule 41 (bloco -> callF .)
    REPEAT          reduce using rule 41 (bloco -> callF .)
    WHILE           reduce using rule 41 (bloco -> callF .)
    $end            reduce using rule 41 (bloco -> callF .)
    }               reduce using rule 41 (bloco -> callF .)
    RETURN          reduce using rule 41 (bloco -> callF .)


state 19
